fixing alignment of skills tap for moble

--- a/style/about.css
+++ b/style/about.css
@@ -51,7 +51,6 @@ body {
     width: 100px;
     height: 30px;
     position: absolute;
-    top: 42%;
     padding: 10px;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -64,6 +63,17 @@ body {
     cursor: pointer;
     transition: transform .5s ease;
     animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
+}
+@media screen and (max-width: 480px) {
+    .skills_tab {
+        top: 300px;
+    }
+}
+
+@media screen and (min-width: 481px) {
+    .skills_tab {
+        top: 40%;
+    }
 }
 @keyframes fadeInText {
     0% {
